# PrecompileDemo

./: CMakeLists.txt  README.md
demoApp/: CMakeLists.txt  MyWidget.cpp  MyWidget.h  main.cpp  stdafx.h
demoLib/: BaseWidget.cpp  CMakeLists.txt  func.cpp  stdafx.h
include/demoLib/: BaseWidget.h  demoLib_export.h  func.h
